git history diff-view improvements
 - copy tab and divider state when diffs are switched
 - remove loading screen, simply swap out the diff views
   - git diff generation is very fast
   - this avoids flickering when switching between diffs
 - added vertical / horizontal layout switcher
 - commit tree nodes use now the commit icon
 - files are colored based on their git add/remove/modify state
 - add key binding to next/prev button tooltip text